# analytics-mfnf

./: .gitignore  .tool-versions  README.md  main.py  pyproject.toml  wikimedia.py
.github/: dependabot.yml
.github/workflows/: checks.yml  publish.yml
mfnf/: __init__.py  mfnf.py  sitemap.py
notebooks/: 2025-03-14-parse-sitemap.ipynb  2025-03-14-project-structure.ipynb  2025-03-16-test-apis.ipynb  template-statistic.ipynb  template.ipynb
notebooks/reports/: 2025-03-14-project-structure.ipynb  2025-07-16-pageviews-per-user-on-wikibooks.ipynb
notebooks/statistics/: general-statistics.ipynb  general.ipynb  impact-measurement.ipynb  most-viewed-article-last-year.ipynb  page-view-distribution.ipynb  pie-chart-view-distribution.ipynb  trend-analysis.ipynb
scripts/: build  check-code.sh  check-format.sh  check.sh  create-new-notebook  start-jupyter-lab  test
tests/: mfnf_test.py  wikimedia_test.py
tests/mfnf/: sitemap_test.py
