[project]
name = "analytics-serlo-hochschulmathematik"
version = "0.1.0"
description = "Analytics of page views for the project „Serlo Hochschulmathematik“"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.30.0",
    "langchain-openai>=0.3.8",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
