[project]
name = "analytics-serlo-hochschulmathematik"
version = "0.1.0"
description = "Analytics of page views for the project „Serlo Hochschulmathematik“"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.30.0",
    "langchain-openai>=1.2.2",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv]
exclude-newer = "3 days"
